--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "fetch:token" : "node src/scripts/fetchTokens.js",
+    "fetch:safes" : "node src/scripts/fetchInteractions.js"
   },
   "keywords": [],
   "author": "",
